--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@
 			
 			</div>
 			<br>
-			<p class="email">@ COOLDOGE. Alrught Reserved</p>
+			<p class="email">@ COOLDOGE. Alright Reserved</p>
 		</section>
 	</div>
 	<script type='text/javascript'>
