--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>COOLDOGE</title>
+	<title>Just a Cool Doge</title>
 	<meta name='robots' content='max-image-preview:large'>
 	<link rel="alternate" type="application/rss+xml" title="$COOLDOGE &raquo; Feed" href="feed/index.htm">
 	<link rel="alternate" type="application/rss+xml" title="$COOLDOGE &raquo; Comments Feed" href="comments/feed/index.htm">
@@ -613,6 +613,7 @@
 											<div class="elementor-widget-container">
 												<div class="ekit-wid-con">
 													<div class="ekit-element-align-wrapper">
+														<p class="catxt">justAcooldogeofficial@gmail.com</p>
 														<p class="catxt">000000000000000000000000000000000</p>
 														<div class="ekit_double_button"> <a
 																class="ekit-double-btn mainbtn ekit-double-btn-one"
@@ -620,7 +621,7 @@
 																Telegram </a>
 
 															<a class="ekit-double-btn mainbtn ekit-double-btn-two"
-																href="https://x.com/" target="_blank">
+																href="https://x.com/CoolDoge_Sol" target="_blank">
 																Twitter </a>
 														</div>
 													</div>
@@ -686,12 +687,9 @@
 											data-id="63a0090" data-element_type="widget"
 											data-widget_type="text-editor.default">
 											<div class="elementor-widget-container" style="padding: 20px;">
-												<p>Doge, the internet’s most iconic Shiba Inu, takes coolness to a whole new level when rocking a pair of Pit Viper sunglasses. 
-													Perched confidently on its snout, the Coolest Doge’s effortless swagger, 
-													perfectly complementing its famously expressive face. With every tilt of its head, 
-													the aura of “much style, very wow”. 
-													Whether lounging on a skate ramp or striking a pose by a neon blue-jacket, 
-													Doge proves that being cool is not just a look—it’s a lifestyle.
+												<p>Description: In a world where memes drive the market, $COOLDOGE isn’t just another dog-themed coin—it’s a statement. 
+													With lightning-speed transactions, near-zero fees, and Solana’s rock-solid infrastructure, $COOLDOGE is set to become the top dog in the meme token pack. 
+													Forget gas wars and slow blockchains—this pup is running on pure Solana power.
 <Br><br>
 											</p>
 											</div>
